--- a/myapp/src/app.html
+++ b/myapp/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="icon" href="https://fav.farm/🗿" />
 		<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
+		<div style="display: contents">%sveltekit.head%</div>
 
 		<script type="module">
 			const theme = localStorage.getItem('color-scheme')
